change img folder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Cuk Danijela Portfolio</title>
   <!-- Meta tag -->
   <meta charset="utf-8" />
+  <meta name="theme-color" content="#c7254e" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta
     content="cuk danijela, cuk danijela web-site, cuk-danijela portfolio, danijela cuk, danijela cuk web developer, danijela cuk frontend developer"
@@ -12,8 +13,8 @@
   <meta content="Cuk Danijela Portfolio" name="description" />
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon" />
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link href="dist/img/favicon.png" rel="icon" />
+  <link href="dist/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
   <!-- Libary CSS File -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -120,7 +121,7 @@
         <!-- single-well start-->
         <div class="col-md-5 col-sm-6 col-xs-12">
           <div class="about-image">
-            <img src="assets/img/me.jpg" alt="image" />
+            <img src="dist/img/me.jpg" alt="image" />
           </div>
         </div>
         <!-- single-well end-->
@@ -398,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img src="assets/img/portfolio/boat.jpg" alt="Boat" class="img-responsive" />
+                  <img src="dist/img/portfolio/boat.jpg" alt="Boat" class="img-responsive" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -426,7 +427,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" area-label="Read more about Fly Design"><img src="assets/img/portfolio/fly.jpg"
+                <a href="#" area-label="Read more about Fly Design"><img src="dist/img/portfolio/fly.jpg"
                     alt="Fly Design" class="img-responsive" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
@@ -450,7 +451,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" area-label="Read more about Bead Art Shop"><img src="assets/img/portfolio/bead.jpg"
+                <a href="#" area-label="Read more about Bead Art Shop"><img src="dist/img/portfolio/bead.jpg"
                     alt="Bead Art Shop" class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -468,7 +469,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Books App"><img src="assets/img/portfolio/books.jpg"
+                <a href="#" aria-label="Read more about Books App"><img src="dist/img/portfolio/books.jpg"
                     alt="Libraries" class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -491,7 +492,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="assets/img/portfolio/movies.jpg" alt="Movies" class="img-responsive"/></a>
+                <a href="#"><img src="dist/img/portfolio/movies.jpg" alt="Movies" class="img-responsive"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -509,7 +510,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Davie's burger"><img src="assets/img/portfolio/burger.jpg"
+                <a href="#" aria-label="Read more about Davie's burger"><img src="dist/img/portfolio/burger.jpg"
                     alt="Burgers" class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -528,8 +529,8 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Tsunami Cafe"><img src="assets/img/portfolio/cafe.jpg"
-                    alt="Cafe" class="img-responsive" /></a>
+                <a href="#" aria-label="Read more about Tsunami Cafe"><img src="dist/img/portfolio/cafe.jpg" alt="Cafe"
+                    class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
@@ -552,7 +553,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Watch Shop"><img src="assets/img/portfolio/watch.jpg"
+                <a href="#" aria-label="Read more about Watch Shop"><img src="dist/img/portfolio/watch.jpg"
                     alt="Watches" class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -572,7 +573,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img src="assets/img/portfolio/music.jpg" alt="Music" class="img-responsive"/></a>
+                <a href="#"><img src="dist/img/portfolio/music.jpg" alt="Music" class="img-responsive"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="/bass/index.html" rel="noopener" target="_blank">
@@ -594,7 +595,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Newspapers"><img src="assets/img/portfolio/news.jpg"
+                <a href="#" aria-label="Read more about Newspapers"><img src="dist/img/portfolio/news.jpg"
                     alt="Newspapers" class="img-responsive" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
