--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- single-well start-->
         <div class="col-md-5 col-sm-6 col-xs-12">
           <div class="about-image">
-            <img data-src="dist/img/me.jpg" alt="image" />
+            <img data-src="dist/img/me.jpg" alt="image" class="lazyload" />
           </div>
         </div>
         <!-- single-well end-->
@@ -399,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img data-src="dist/img/portfolio/boat.jpg" alt="Boat" class="img-responsive lazyload" />
+                  <img data-src="dist/img/portfolio/boat.jpg" alt="Boat" class="lazyload" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -428,7 +428,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Fly Design"><img data-src="dist/img/portfolio/fly.jpg"
-                    alt="Fly Design" class="img-responsive lazyload" /></a>
+                    alt="Fly Design" class="lazyload" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/fly-design/index.html" rel="noopener"
@@ -452,7 +452,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Bead Art Shop"><img data-src="dist/img/portfolio/bead.jpg"
-                    alt="Bead Art Shop" class="img-responsive lazyload" /></a>
+                    alt="Bead Art Shop" class="lazyload" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="coming-soon.html">
@@ -470,7 +470,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Books App"><img data-src="dist/img/portfolio/books.jpg"
-                    alt="Libraries" class="img-responsive lazyload" /></a>
+                    alt="Libraries" class="lazyload" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -492,7 +492,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/movies.jpg" alt="Movies" class="img-responsive lazyload"/></a>
+                <a href="#"><img data-src="dist/img/portfolio/movies.jpg" alt="Movies" class="lazyload"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -511,7 +511,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img data-src="dist/img/portfolio/burger.jpg"
-                    alt="Burgers" class="img-responsive lazyload" /></a>
+                    alt="Burgers" class="lazyload" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/davie-s-burgers/index.html" rel="noopener"
@@ -530,7 +530,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Tsunami Cafe"><img data-src="dist/img/portfolio/cafe.jpg"
-                    alt="Cafe" class="img-responsive lazyload" /></a>
+                    alt="Cafe" class="lazyload" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
@@ -554,7 +554,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Watch Shop"><img data-src="dist/img/portfolio/watch.jpg"
-                    alt="Watches" class="img-responsive lazyload" /></a>
+                    alt="Watches" class="lazyload" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/watch-shop/index.html" rel="noopener"
@@ -573,7 +573,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/music.jpg" alt="Music" class="img-responsive lazyload"/></a>
+                <a href="#"><img data-src="dist/img/portfolio/music.jpg" alt="Music" class="lazyload"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="/bass/index.html" rel="noopener" target="_blank">
@@ -595,8 +595,9 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Newspapers"><img data-src="dist/img/portfolio/news.jpg"
-                    alt="Newspapers" class="img-responsive lazyload" /></a>
+                <a href="#" aria-label="Read more about Newspapers">
+                  <img data-src="dist/img/portfolio/news.jpg" alt="Newspapers" class="lazyload" />
+                </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
