Minify Css file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Libary CSS File -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="dist/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="preload" href="dist/css/font-awesome.min.css" as="style" />
 
   <!-- Main Stylesheet File -->
   <link href="dist/css/style.min.css" rel="stylesheet" />
