--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Libary CSS File -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="preload" href="dist/css/font-awesome.min.css" as="style" />
+  <link href="dist/css/font-awesome.min.css" rel="stylesheet" />
 
   <!-- Main Stylesheet File -->
   <link href="dist/css/style.min.css" rel="stylesheet" />
@@ -741,12 +741,12 @@
   <script src="dist/js/typer.min.js"></script>
   <script src="dist/js/bootstrap.min.js"></script>
   <script src="dist/js/owl.carousel.min.js"></script>
-  <script src="dist/js/venobox.min.js"></script>
+  <!-- <script src="dist/js/venobox.min.js"></script> -->
   <script src="dist/js/jquery.knob.min.js"></script>
-  <script src="dist/js/wow.min.js"></script>
+  <!-- <script src="dist/js/wow.min.js"></script> -->
   <script src="dist/js/parallax.min.js"></script>
   <script src="dist/js/easing.min.js"></script>
-  <script src="dist/js/jquery.nivo.slider.min.js"></script>
+  <!-- <script src="dist/js/jquery.nivo.slider.min.js"></script> -->
   <script src="dist/js/jquery.appear.min.js"></script>
   <script src="dist/js/isotope.pkgd.min.js"></script>
   <script src="dist/js/anime.min.js"></script>
