--- a/index.html
+++ b/index.html
@@ -740,18 +740,18 @@
   <script src="dist/js/jquery.min.js"></script>
   <script src="dist/js/typer.min.js"></script> <!-- Text Animation -->
   <script src="dist/js/bootstrap.min.js"></script>
-  <!-- <script src="dist/js/owl.carousel.min.js"></script> -->
+  <script src="dist/js/owl.carousel.min.js"></script>
   <script src="dist/js/venobox.min.js"></script> <!-- Portfolio Boxes-->
   <script src="dist/js/jquery.knob.min.js"></script> <!-- Skills percent -->
-  <!-- <script src="dist/js/wow.min.js"></script> -->
-  <!-- <script src="dist/js/parallax.min.js"></script> -->
+  <script src="dist/js/wow.min.js"></script>
+  <script src="dist/js/parallax.min.js"></script>
   <script src="dist/js/easing.min.js"></script>
-  <!-- <script src="dist/js/jquery.nivo.slider.min.js"></script> -->
+  <script src="dist/js/jquery.nivo.slider.min.js"></script>
   <script src="dist/js/jquery.appear.min.js"></script>
-  <!-- <script src="dist/js/isotope.pkgd.min.js"></script> -->
+  <script src="dist/js/isotope.pkgd.min.js"></script>
   <script src="dist/js/anime.min.js"></script>
   <script src="dist/js/lazysizes.min.js" async></script>
-  <script src="dist/js/main.min.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 
 </html>
