Gulp.js compress files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <!-- Brand -->
-                <a class="navbar-brand page-scroll sticky-logo" href="index.html">
+                <a class="navbar-brand page-scroll sticky-logo">
                   <h1>
                     <span class="logo-text"><code>&lt; Danijela Cuk /&gt;</code></span>
                   </h1>
@@ -121,7 +121,7 @@
         <!-- single-well start-->
         <div class="col-md-5 col-sm-6 col-xs-12">
           <div class="about-image">
-            <img data-src="dist/img/me.jpg" alt="image" class="lazyload" />
+            <img data-src="dist/img/me.jpg" alt="image" class="image-responsive lazyload" />
           </div>
         </div>
         <!-- single-well end-->
@@ -406,7 +406,8 @@
                     <a class="venobox" data-gall="myGallery" href="src/crusing-dubrovnik/index.html" rel="noopener"
                       target="_blank">
                       <h4>Cruising Dubrovnik</h4>
-                      <span>Web Design</span><br /><br />
+                      <span>Web Design</span>
+                      <hr/>
                       <kbd>Html5</kbd>
                       <kbd>Css3</kbd>
                       <kbd>Bootstrap3</kbd>
@@ -434,7 +435,8 @@
                     <a class="venobox" data-gall="myGallery" href="src/fly-design/index.html" rel="noopener"
                       target="_blank">
                       <h4>Fly Design</h4>
-                      <span>Web Design</span><br /><br />
+                      <span>Web Design</span>
+                      <hr/>
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Animate.css</kbd>
@@ -458,6 +460,7 @@
                     <a class="venobox" data-gall="myGallery" href="coming-soon.html">
                       <h4>Bead Art Shop</h4>
                       <span>Web Design</span>
+                      <hr/>
                     </a>
                   </div>
                 </div>
@@ -475,7 +478,8 @@
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
                       <h4>Pocket Book</h4>
-                      <span>Web Development</span><br /><br />
+                      <span>Web Development</span>
+                      <hr/>
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -507,7 +511,7 @@
           <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-4 col-xs-12 development">
+          <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img data-src="dist/img/portfolio/burger.jpg"
@@ -517,7 +521,11 @@
                     <a class="venobox" data-gall="myGallery" href="src/davie-s-burgers/index.html" rel="noopener"
                       target="_blank">
                       <h4>Davie's Burgers</h4>
-                      <span>Web Development</span>
+                      <span>Web Design</span>
+                      <hr/>
+                      <kbd>Html</kbd>
+                      <kbd>Css</kbd>
+                      <kbd>JavaScript</kbd>
                     </a>
                   </div>
                 </div>
@@ -536,7 +544,8 @@
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
                       target="_blank">
                       <h4>Tsunami Cafe</h4>
-                      <span>Web Design</span><br /><br />
+                      <span>Web Design</span>
+                      <hr/>
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Bootstrap</kbd>
@@ -560,7 +569,8 @@
                     <a class="venobox" data-gall="myGallery" href="src/watch-shop/index.html" rel="noopener"
                       target="_blank">
                       <h4>Watch Shop</h4>
-                      <span>Web Development</span>
+                      <span>Web Design</span>
+                      <hr/>
                     </a>
                   </div>
                 </div>
@@ -602,7 +612,8 @@
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
                       <h4>Headlines</h4>
-                      <span>Web Development</span><br /><br />
+                      <span>Web Development</span>
+                      <hr/>
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>React.js</kbd>
@@ -740,6 +751,7 @@
   <script src="dist/js/jquery.min.js"></script>
   <script src="dist/js/typer.min.js"></script> <!-- Text Animation -->
   <script src="dist/js/bootstrap.min.js"></script>
+  <script src="dist/js/lazysizes.min.js" async></script>
   <script src="dist/js/owl.carousel.min.js"></script>
   <script src="dist/js/venobox.min.js"></script> <!-- Portfolio Boxes-->
   <script src="dist/js/jquery.knob.min.js"></script> <!-- Skills percent -->
@@ -750,8 +762,7 @@
   <script src="dist/js/jquery.appear.min.js"></script>
   <script src="dist/js/isotope.pkgd.min.js"></script>
   <script src="dist/js/anime.min.js"></script>
-  <script src="dist/js/lazysizes.min.js" async></script>
-  <script src="dist/js/main.js"></script>
+  <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
