Update node modules

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- single-well start-->
         <div class="col-md-5 col-sm-6 col-xs-12">
           <div class="about-image">
-            <img data-src="dist/img/me.jpg" alt="image" class="image-responsive lazyload" />
+            <img data-src="dist/img/me.jpg" alt="image" class="image-responsive" />
           </div>
         </div>
         <!-- single-well end-->
@@ -399,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img data-src="dist/img/portfolio/boat.jpg" alt="Boat" class="lazyload" />
+                  <img data-src="dist/img/portfolio/boat.jpg" alt="Boat" class="" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -429,7 +429,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Fly Design"><img data-src="dist/img/portfolio/fly.jpg"
-                    alt="Fly Design" class="lazyload" /></a>
+                    alt="Fly Design" class="" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/fly-design/index.html" rel="noopener"
@@ -454,7 +454,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Bead Art Shop"><img data-src="dist/img/portfolio/bead.jpg"
-                    alt="Bead Art Shop" class="lazyload" /></a>
+                    alt="Bead Art Shop" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="coming-soon.html">
@@ -473,7 +473,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Books App"><img data-src="dist/img/portfolio/books.jpg"
-                    alt="Libraries" class="lazyload" /></a>
+                    alt="Libraries" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -496,7 +496,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/movies.jpg" alt="Movies" class="lazyload"/></a>
+                <a href="#"><img data-src="dist/img/portfolio/movies.jpg" alt="Movies" class=""/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -515,7 +515,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img data-src="dist/img/portfolio/burger.jpg"
-                    alt="Burgers" class="lazyload" /></a>
+                    alt="Burgers" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/davie-s-burgers/index.html" rel="noopener"
@@ -538,7 +538,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Tsunami Cafe"><img data-src="dist/img/portfolio/cafe.jpg"
-                    alt="Cafe" class="lazyload" /></a>
+                    alt="Cafe" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
@@ -563,7 +563,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Watch Shop"><img data-src="dist/img/portfolio/watch.jpg"
-                    alt="Watches" class="lazyload" /></a>
+                    alt="Watches" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/watch-shop/index.html" rel="noopener"
@@ -583,7 +583,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/music.jpg" alt="Music" class="lazyload"/></a>
+                <a href="#"><img data-src="dist/img/portfolio/music.jpg" alt="Music" class=""/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="/bass/index.html" rel="noopener" target="_blank">
@@ -606,7 +606,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Newspapers">
-                  <img data-src="dist/img/portfolio/news.jpg" alt="Newspapers" class="lazyload" />
+                  <img data-src="dist/img/portfolio/news.jpg" alt="Newspapers" class="" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -751,7 +751,6 @@
   <script src="dist/js/jquery.min.js"></script>
   <script src="dist/js/typer.min.js"></script> <!-- Text Animation -->
   <script src="dist/js/bootstrap.min.js"></script>
-  <script src="dist/js/lazysizes.min.js" async></script>
   <script src="dist/js/owl.carousel.min.js"></script>
   <script src="dist/js/venobox.min.js"></script> <!-- Portfolio Boxes-->
   <script src="dist/js/jquery.knob.min.js"></script> <!-- Skills percent -->
