Data-src replaces with src

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- single-well start-->
         <div class="col-md-5 col-sm-6 col-xs-12">
           <div class="about-image">
-            <img data-src="dist/img/me.jpg" alt="image" class="image-responsive" />
+            <img src="dist/img/me.jpg" alt="image" class="image-responsive" />
           </div>
         </div>
         <!-- single-well end-->
@@ -399,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img data-src="dist/img/portfolio/boat.jpg" alt="Boat" class="" />
+                  <img src="dist/img/portfolio/boat.jpg" alt="Boat" class="" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -428,7 +428,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" area-label="Read more about Fly Design"><img data-src="dist/img/portfolio/fly.jpg"
+                <a href="#" area-label="Read more about Fly Design"><img src="dist/img/portfolio/fly.jpg"
                     alt="Fly Design" class="" /></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
@@ -453,7 +453,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" area-label="Read more about Bead Art Shop"><img data-src="dist/img/portfolio/bead.jpg"
+                <a href="#" area-label="Read more about Bead Art Shop"><img src="dist/img/portfolio/bead.jpg"
                     alt="Bead Art Shop" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -472,7 +472,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Books App"><img data-src="dist/img/portfolio/books.jpg"
+                <a href="#" aria-label="Read more about Books App"><img src="dist/img/portfolio/books.jpg"
                     alt="Libraries" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -496,7 +496,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/movies.jpg" alt="Movies" class=""/></a>
+                <a href="#"><img src="dist/img/portfolio/movies.jpg" alt="Movies" class=""/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -514,7 +514,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Davie's burger"><img data-src="dist/img/portfolio/burger.jpg"
+                <a href="#" aria-label="Read more about Davie's burger"><img src="dist/img/portfolio/burger.jpg"
                     alt="Burgers" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -537,7 +537,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Tsunami Cafe"><img data-src="dist/img/portfolio/cafe.jpg"
+                <a href="#" aria-label="Read more about Tsunami Cafe"><img src="dist/img/portfolio/cafe.jpg"
                     alt="Cafe" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -562,7 +562,7 @@
           <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#" aria-label="Read more about Watch Shop"><img data-src="dist/img/portfolio/watch.jpg"
+                <a href="#" aria-label="Read more about Watch Shop"><img src="dist/img/portfolio/watch.jpg"
                     alt="Watches" class="" /></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -583,7 +583,7 @@
           <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
-                <a href="#"><img data-src="dist/img/portfolio/music.jpg" alt="Music" class=""/></a>
+                <a href="#"><img src="dist/img/portfolio/music.jpg" alt="Music" class=""/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="/bass/index.html" rel="noopener" target="_blank">
@@ -606,7 +606,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Newspapers">
-                  <img data-src="dist/img/portfolio/news.jpg" alt="Newspapers" class="" />
+                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers" class="" />
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
