Replace watch image

--- a/index.html
+++ b/index.html
@@ -181,23 +181,23 @@
             <div class="footer-icons">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/dandza18" title="View my profile on facebook" rel="noopener"
+                  <a href="https://www.facebook.com/dandza18" title="View my profile on Facebook" rel="noopener"
                     target="_blank"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/danijela-cuk-1990/" title="View my profile on linkedin"
+                  <a href="https://www.linkedin.com/in/danijela-cuk-1990/" title="View my profile on Linkedin"
                     rel="noopener" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://github.com/cuk-danijela" title="View my profile on github" rel="noopener"
+                  <a href="https://github.com/cuk-danijela" title="View my profile on Github" rel="noopener"
                     target="_blank"><i class="fa fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="https://codepen.io/cuk-danijela" title="View my profile on codepen" rel="noopener"
+                  <a href="https://codepen.io/cuk-danijela" title="View my profile on Codepen" rel="noopener"
                     target="_blank"><i class="fa fa-codepen"></i></a>
                 </li>
                 <li>
-                  <a href="https://join.skype.com/invite/mUJ0C5QiH6I8" title="Contact me with skype" rel="noopener"
+                  <a href="https://join.skype.com/invite/mUJ0C5QiH6I8" title="Contact me with Skype" rel="noopener"
                     target="_blank"><i class="fa fa-skype"></i></a>
                 </li>
               </ul>
@@ -399,7 +399,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Crusing Dubrovnik">
-                  <img src="dist/img/portfolio/boat.jpg" alt="Boat" class="" />
+                  <img src="dist/img/portfolio/boat.jpg" alt="Boat"/>
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -408,14 +408,13 @@
                       <h4>Cruising Dubrovnik</h4>
                       <span>Web Design</span>
                       <hr/>
-                      <kbd>Html5</kbd>
-                      <kbd>Css3</kbd>
-                      <kbd>Bootstrap3</kbd>
-                      <kbd>Font Awesome</kbd>
+                      <kbd>Html</kbd>
+                      <kbd>Css</kbd>
+                      <kbd>Bootstrap</kbd>
                       <kbd>JavaScript</kbd>
                       <kbd>Jquery</kbd>
                       <kbd>Php</kbd>
-                      <kbd>SEO</kbd>
+                      <kbd>Font-Awesome</kbd>
                     </a>
                   </div>
                 </div>
@@ -429,7 +428,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Fly Design"><img src="dist/img/portfolio/fly.jpg"
-                    alt="Fly Design" class="" /></a>
+                    alt="Fly Design"/></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/fly-design/index.html" rel="noopener"
@@ -440,8 +439,9 @@
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
                       <kbd>Animate.css</kbd>
-                      <kbd>Font Awesome</kbd>
                       <kbd>Jquery</kbd>
+                      <kbd>Font-Awesome</kbd>
+                      <kbd>Gulp.js</kbd>
                     </a>
                   </div>
                 </div>
@@ -450,11 +450,11 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-4 col-xs-12 design">
+          <div class="col-md-3 col-sm-4 col-xs-12 development">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" area-label="Read more about Bead Art Shop"><img src="dist/img/portfolio/bead.jpg"
-                    alt="Bead Art Shop" class="" /></a>
+                    alt="Bead Art Shop"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="coming-soon.html">
@@ -473,7 +473,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Books App"><img src="dist/img/portfolio/books.jpg"
-                    alt="Libraries" class="" /></a>
+                    alt="Libraries"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="#">
@@ -515,7 +515,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Davie's burger"><img src="dist/img/portfolio/burger.jpg"
-                    alt="Burgers" class="" /></a>
+                    alt="Burgers"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/davie-s-burgers/index.html" rel="noopener"
@@ -525,6 +525,7 @@
                       <hr/>
                       <kbd>Html</kbd>
                       <kbd>Css</kbd>
+                      <kbd>Hover.css</kbd>
                       <kbd>JavaScript</kbd>
                     </a>
                   </div>
@@ -538,7 +539,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Tsunami Cafe"><img src="dist/img/portfolio/cafe.jpg"
-                    alt="Cafe" class="" /></a>
+                    alt="Cafe"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/tsunami-coffee/index.html" rel="noopener"
@@ -559,11 +560,11 @@
           <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
-          <div class="col-md-3 col-sm-4 col-xs-12 development">
+          <div class="col-md-3 col-sm-4 col-xs-12 design">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Watch Shop"><img src="dist/img/portfolio/watch.jpg"
-                    alt="Watches" class="" /></a>
+                    alt="Watches"/></a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
                     <a class="venobox" data-gall="myGallery" href="src/watch-shop/index.html" rel="noopener"
@@ -571,6 +572,12 @@
                       <h4>Watch Shop</h4>
                       <span>Web Design</span>
                       <hr/>
+                      <kbd>Html</kbd>
+                      <kbd>Css</kbd>
+                      <kbd>Bootstrap</kbd>
+                      <kbd>Jquery</kbd>
+                      <kbd>Font-Awesome</kbd>
+                      <kbd>Gulp.js</kbd>
                     </a>
                   </div>
                 </div>
@@ -606,7 +613,7 @@
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#" aria-label="Read more about Newspapers">
-                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers" class="" />
+                  <img src="dist/img/portfolio/news.jpg" alt="Newspapers"/>
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
@@ -702,23 +709,23 @@
                 <div class="footer-icons">
                   <ul>
                     <li>
-                      <a href="https://www.facebook.com/dandza18" title="View my profile on facebook" rel="noopener"
+                      <a href="https://www.facebook.com/dandza18" title="View my profile on Facebook" rel="noopener"
                         target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                      <a href="https://www.linkedin.com/in/danijela-cuk-1990/" title="View my profile on linkedin"
+                      <a href="https://www.linkedin.com/in/danijela-cuk-1990/" title="View my profile on Linkedin"
                         rel="noopener" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
                     <li>
-                      <a href="https://github.com/cuk-danijela" title="View my profile on github" rel="noopener"
+                      <a href="https://github.com/cuk-danijela" title="View my profile on Github" rel="noopener"
                         target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                     <li>
-                      <a href="https://codepen.io/cuk-danijela" title="View my profile on codepen" rel="noopener"
+                      <a href="https://codepen.io/cuk-danijela" title="View my profile on Codepen" rel="noopener"
                         target="_blank"><i class="fa fa-codepen"></i></a>
                     </li>
                     <li>
-                      <a href="https://join.skype.com/invite/mUJ0C5QiH6I8" title="Contact me with skype" rel="noopener"
+                      <a href="https://join.skype.com/invite/mUJ0C5QiH6I8" title="Contact me with Skype" rel="noopener"
                         target="_blank"><i class="fa fa-skype"></i></a>
                     </li>
                   </ul>
@@ -745,7 +752,7 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top" title="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top" title="Back to top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
   <script src="dist/js/jquery.min.js"></script>
