--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
                       <kbd>JavaScript</kbd>
                       <kbd>Jquery</kbd>
                       <kbd>Php</kbd>
+                      <kbd>FireBase</kbd>
                       <kbd>Font-Awesome</kbd>
                     </a>
                   </div>
@@ -431,7 +432,7 @@
                     alt="Fly Design"/></a>
                 <div class="add-actions text-center text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="src/fly-design/index.html" rel="noopener"
+                    <a class="venobox" data-gall="myGallery" href="https://fly-design-f6801.firebaseapp.com" rel="noopener"
                       target="_blank">
                       <h4>Fly Design</h4>
                       <span>Web Design</span>
@@ -442,6 +443,7 @@
                       <kbd>Jquery</kbd>
                       <kbd>Font-Awesome</kbd>
                       <kbd>Gulp.js</kbd>
+                      <kbd>FireBase</kbd>
                     </a>
                   </div>
                 </div>
