--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 </a>
                 <div class="add-actions text-center">
                   <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="src/crusing-dubrovnik/index.html" rel="noopener"
+                    <a class="venobox" data-gall="myGallery" href="https://cruising-dubrovnik.web.app" rel="noopener"
                       target="_blank">
                       <h4>Cruising Dubrovnik</h4>
                       <span>Web Design</span>
