React Agenda App added into project

--- a/index.html
+++ b/index.html
@@ -494,23 +494,31 @@
           </div>
           <!-- single-awesome-project end -->
 
-          <!-- single-awesome-project start -->
-          <!--  <div class="col-md-4 col-sm-4 col-xs-12 development">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="dist/img/portfolio/movies.jpg" alt="Movies" class=""/></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                    <a class="venobox" data-gall="myGallery" href="#">
-                      <h4>Bolt Network</h4>
-                      <span>Web Development</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <!-- single-awesome-project end -->
+         <!-- single-awesome-project start -->
+         <div class="col-md-3 col-sm-4 col-xs-12 development">
+           <div class="single-awesome-project">
+             <div class="awesome-img">
+               <a href="#" aria-label="Read more about Agenda App"><img src="dist/img/portfolio/agenda.jpg"
+                   alt="Agenda" /></a>
+               <div class="add-actions text-center">
+                 <div class="project-dec">
+                   <a class="venobox" data-gall="myGallery" href="https://react-agenda-app.firebaseapp.com"
+                     rel="noopener"
+                     target="_blank">
+                     <h4>Agenda</h4>
+                     <span>Web Development</span>
+                     <hr />
+                     <kbd>Html</kbd>
+                     <kbd>Css</kbd>
+                     <kbd>React.js</kbd>
+                     <kbd>FireBase</kbd>
+                   </a>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <!-- single-awesome-project end -->
 
           <!-- single-awesome-project start -->
           <div class="col-md-3 col-sm-4 col-xs-12 design">
